tdf#156091: handle OWN_ATTR_TEXTCOLUMNS in SdStyleSheet::getPropertyValue_Impl

Somehow I failed to implement this from start. In commit
95ebd24a629b4c8cd62cc20c0701683512cc8fa0 (editengine-columns:
ODF support [API CHANGE], 2021-06-08), I implemented its
support in SdStyleSheet::getPropertyState; then, in commit
f2ea39c70da3f82bb39f8b51b5484172360b1fc2 (Avoid crash getting
default item for OWN_ATTR_TEXTCOLUMNS, 2021-06-22), I added
its support in SdStyleSheet::setPropertyValue; and finally,
the time has come to support getting its value. Better late
than never.

Change-Id: Ifa1f933f00336bf6d01a5c71d0c92baf846ccabb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153777
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 4e20f95cf6744ca85bc8c090b926031729addc89)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153763
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>